# DemoReader

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chaoxing/reader/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chaoxing/reader/demo/: AppApplication.java  CrashHandler.java  FileAdapter.java  MainActivity.java  MainViewModel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/chaoxing/reader/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libepub/: CMakeLists.txt  build.gradle
libepub/src/androidTest/java/com/chaoxing/epub/: ExampleInstrumentedTest.java
libepub/src/main/: AndroidManifest.xml
libepub/src/main/cpp/: epub.cpp  native-epub.cpp
libepub/src/main/cpp/Common/cximage/CxImage/: ximabmp.cpp  ximacfg.h  ximadef.h  ximage.h  ximaico.cpp  ximajpg.h  ximatran.cpp
libepub/src/main/cpp/Common/cximage/jasper/: jas_cm.c  jas_cm.h  jas_debug.h  jas_fix.h  jas_getopt.h  jas_image.h  jas_malloc.h  jas_math.h  jas_seq.h  jas_stream.h  jas_string.h  jas_tvp.h  jas_types.h  jas_version.h  jpc_cs.c  jpc_fix.h  jpg_jpeglib.h
libepub/src/main/cpp/Common/freetype/include/: ft2build.h
libepub/src/main/cpp/Common/freetype/include/freetype/: freetype.h
libepub/src/main/cpp/Common/freetype/include/freetype/config/: ftoption.h
libepub/src/main/cpp/Common/freetype/src/base/: ftobjs.c  ftstream.c  ftsystem.c
libepub/src/main/cpp/Common/freetype/src/truetype/: ttdriver.c  ttgload.c
libepub/src/main/cpp/Common/freetype/src/type1/: t1gload.c
libepub/src/main/cpp/Common/freetype/src/type42/: t42objs.c
libepub/src/main/cpp/Common/freetype/src/winfonts/: winfnt.c
libepub/src/main/cpp/Common/libiconv-1.14/: libtool
libepub/src/main/cpp/Common/libiconv-1.14/libcharset/: config.status  libtool
libepub/src/main/cpp/Common/libiconv-1.14/libcharset/lib/: localcharset.c  localcharset.c.bak
libepub/src/main/cpp/Common/libiconv-1.14/po/: Makefile  Makefile.in
libepub/src/main/cpp/Common/libiconv-1.14/preload/: config.status  libtool
libepub/src/main/cpp/Common/libiconv-1.14/src/: Makefile  iconv.res
libepub/src/main/cpp/Common/libiconv-1.14/srclib/: Makefile
libepub/src/main/cpp/Common/tinyxml/: tinyxml.h
libepub/src/main/cpp/Common/zlib-1.2.5/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzlib.c  minigzip.c  trees.c  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
libepub/src/main/cpp/Common/zlib-1.2.5/contrib/minizip/: ioapi.c  miniunz.c  miniunz.h  minizip.c  unzip.c
libepub/src/main/cpp/SZDev/: BWImageScalingAlgorithm.cpp  BWImageScalingAlgorithm.h  Book.cpp  Book.h  BookChapter.cpp  BookChapter.h  BookInfo.cpp  BookInfo.h  BookSpine.cpp  BookSpine.h  CSSColorMap.h  HtmlParser.cpp  HtmlParser.h  ImageScalingmath.cpp  ImageScalingmath.h  MAlgorithm.cpp  MAlgorithm.h  ReadImageFile.cpp  ReadImageFile.h  Render.cpp  Render.h  SZDefine.h  SZEbookReader.cpp  SZEbookReader.h  SZFTFont.cpp  SZFTFont.h  SZFontManager.cpp  SZFontManager.h  SZImage.cpp  SZImage.h  SZRender.cpp  SZRender.h  StdAfx.h  StringConver.cpp  StringConver.h  StyleSheetParser.cpp  StyleSheetParser.h  ThreadPacket.h  XMLParser.cpp  XMLParser.h  (+6 more)
libepub/src/main/cpp/SZDev/myfDev/: GB18030.h  GBK.h  MYFDefine.h
libepub/src/main/java/com/chaoxing/epub/: BookmarkAdapter.java  BookmarkView.java  CatalogView.java  CatelogAdapter.java  DocumentBinding.java  EpubActivity.java  EpubDocument.java  EpubFile.java  EpubLoader.java  EpubPage.java  EpubPagerAdapter.java  EpubViewModel.java  ExecuteBoundResource.java  NavigationAdapter.java  Page.java  PageKey.java  PageListener.java  PageLoader.java  Resource.java  SimpleAnimatorListener.java  Status.java
libepub/src/main/java/com/chaoxing/epub/nativeapi/: Catalog.java  Chapter.java  EpubDocument.java  EpubInfo.java  OnEventListener.java  Page.java  PageConfig.java
libepub/src/main/java/com/chaoxing/epub/util/: EpubUtils.java  UriUtils.java
libepub/src/main/res/drawable/: libepub_navigation_tab_selected.xml
libepub/src/main/res/layout/: libepub_activity_epub.xml  libepub_activity_epub_bottom_bar.xml  libepub_activity_epub_navigation.xml  libepub_activity_epub_toolbar.xml  libepub_bookmark_view.xml  libepub_catelog_view.xml  libepub_forward_panel.xml  libepub_item_page.xml  libepub_reading_style_panel.xml  libepub_text_stytle_panel.xml
libepub/src/main/res/menu/: libepub_epub.xml  libepub_epub2.xml
libepub/src/main/res/values/: strings.xml
libepub/src/main/res/values-en/: strings.xml
libepub/src/test/java/com/chaoxing/epub/: ExampleUnitTest.java
libpdf/: build.gradle
libpdf/src/androidTest/java/com/chaoxing/pdf/: ExampleInstrumentedTest.java
libpdf/src/main/: AndroidManifest.xml
libpdf/src/main/java/com/chaoxing/pdf/: BookmarkNavigationView.java  ExecuteBoundResource.java  NoteNavigationView.java  OnPageClickListener.java  OutlineItem.java  OutlineNavigationView.java  PDFViewModel.java  PageAdapter.java  PdfActivity.java  PdfBinding.java  PdfLoader.java  PdfPage.java  PdfPageLoader.java  Progress.java  Resource.java  SimpleAnimatorListener.java  Status.java
libpdf/src/main/java/com/chaoxing/pdf/util/: AbsentLiveData.java  PdfUtils.java  UriUtils.java
libpdf/src/main/java/com/chaoxing/pdf/widget/: ImageSource.java  ImageViewState.java  PdfPageView.java
libpdf/src/main/java/com/chaoxing/pdf/widget/decoder/: CompatDecoderFactory.java  DecoderFactory.java  ImageDecoder.java  ImageRegionDecoder.java  SkiaImageDecoder.java  SkiaImageRegionDecoder.java  SkiaPooledImageRegionDecoder.java
libpdf/src/main/res/drawable/: libpdf_divider.xml  libpdf_navigation_toolbar.xml
libpdf/src/main/res/layout/: libpdf_activity_pdf.xml  libpdf_item_outline.xml  libpdf_item_page.xml  libpdf_outline.xml
libpdf/src/main/res/values/: attrs.xml  strings.xml
libpdf/src/main/res/values-en/: strings.xml
libpdf/src/test/java/com/chaoxing/pdf/: ExampleUnitTest.java
